# TelloSwarm

./: .gitignore  LICENSE  README.md
Resources/Documentation/Markdown version/: Documentation.md
Resources/Rviz-config/: TelloConfigRviz.rviz
localization/: CMakeLists.txt  package.xml
marker_localisation/: CMakeLists.txt  package.xml
marker_localisation/config/: config.yaml
marker_localisation/launch/: naive_estimation.launch  static_markers.launch
marker_localisation/src/: localization.py  single_marker_transform.py  static_marker_transforms.py
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/config/: config.yaml
pose_estimation/launch/: naive_estimation.launch  static_markers.launch
pose_estimation/src/: localization.py  localization_estimation.py  location_estimation.py  single_marker_transform.py  static_transform.sh  tello_to_odom_transform.py  visual_marker_transform.py
simulation/: README.txt  capt.py  main.py
tello_formation/: CMakeLists.txt  package.xml
tello_formation/launch/: aruco_detection.launch  formation.launch  sensors.launch  single_drone.launch  slam_detection.launch  static_goals.launch
tello_formation/msg/: GotoCommand.msg
tello_formation/rviz/: config.rviz
tello_formation/scripts/: emergency_all.bash  land_all.bash
tello_formation/src/: controller.py  supervisor.py
tello_ros/: CMakeLists.txt  package.xml
tello_ros/launch/: drone.launch  prerecord.launch
tello_ros/src/: camera_info_publisher.py  camera_parameters_publisher.py  command_server.py  mp4_publisher.py  tello_client.py  video_recorder.py  video_stream.py  video_stream2.py  video_stream_test.py
tello_slam/: CMakeLists.txt
tello_slam/include/: slam_node.h
tello_slam/include/tello_slam/: camera_subscriber.h  slam_node.h
tello_slam/src/: camera_parameters_publisher.py  camera_subscriber.cpp  image_converter.cpp  main.cpp  pose_publisher.cpp  slam_node.cpp  webcam_calib.yml
tello_slam_ros/: CMakeLists.txt  package.xml
tello_slam_ros/config/: params.yml  tello_camera_calib.yml  tello_camera_calib_ucoslam.yml
tello_slam_ros/include/tello_slam_ros/: tello_slam_detector.h  tello_slam_display.h  tello_slam_ros_detector.h  tello_slam_ros_display.h
tello_slam_ros/launch/: tello_slam_ros_detector.launch  tello_slam_ros_display.launch
tello_slam_ros/src/: camera_subscriber.cpp  pose_publisher.cpp  tello_slam_detector.cpp  tello_slam_detector_node.cpp  tello_slam_display.cpp  tello_slam_display_node.cpp  tello_slam_ros_detector.cpp  tello_slam_ros_detector_node.cpp  tello_slam_ros_display.cpp  tello_slam_ros_display_node.cpp
transforms/: CMakeLists.txt  package.xml
transforms/launch/: static_transforms.launch
transforms/nodes/: test.py
